# rrddmma

./: Cargo.toml  LICENSE  README.md  build.rs  run.sh
examples/: cloudlab.xml  dc.rs  dc_local.rs  dc_with_extatomic.rs  extcas.rs  extfaa.rs  lab.toml  local_rc_sendrecv.rs  local_sendrecv.rs  local_ud_sendrecv.rs  loopback.rs  main.rs  timestamp.rs  wr.rs
src/: lib.rs  main.rs  mlnx.rs  prelude.rs
src/bindings/: common.rs  exp.rs  legacy.rs  mlnx4.rs  mlnx5.rs  mod.rs  rdma_core.rs
src/ctrl/: barrier.rs  cluster.rs  connecter.rs  mod.rs
src/hi/: mod.rs  registered_mem.rs
src/lo/: context.rs  mod.rs  pd.rs  prelude.rs  srq.rs  type_alias.rs
src/lo/cq/: exp.rs  mod.rs  wc.rs
src/lo/dct/: builder.rs  mod.rs
src/lo/gid/: raw.rs  typed.rs
src/lo/mr/: mod.rs  perm.rs  remote.rs  slicing.rs
src/lo/nic/: device.rs  mod.rs  port.rs
src/lo/qp/: builder.rs  mod.rs  params.rs  peer.rs
src/lo/wr/: macros.rs  recv.rs  send.rs
src/rdma/: context.rs  cq.rs  device.rs  gid.rs  mod.rs  mr.rs  pd.rs  qp.rs  remote_mem.rs  srq.rs  type_alias.rs  types.rs  wr.rs
src/rdma/cq/: exp.rs  mod.rs  wc.rs
src/rdma/dct/: builder.rs  mod.rs
src/rdma/gid/: mod.rs  raw.rs  typed.rs
src/rdma/mr/: mod.rs  mr_slice.rs  perm.rs  remote.rs  slicing.rs
src/rdma/nic/: device.rs  mod.rs  port.rs
src/rdma/qp/: attr.rs  builder.rs  mod.rs  params.rs  peer.rs  state.rs  ty.rs
src/rdma/wr/: macros.rs  mod.rs  recv.rs  send.rs
src/tcp/: barrier.rs  cluster.rs  connecter.rs  mod.rs
src/utils/: boilerplate.rs  interop.rs  mod.rs  registered_mem.rs  select.rs
src/wrap/: mod.rs  registered_mem.rs
