[package]
name = "rrddmma"
version = "0.5.6"
edition = "2021"

authors = ["Jian Gao <i@icyf.me>"]
description = "A Rust library for RDMA."
repository = "https://github.com/IcicleF/rrddmma"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
rdma-sys = "0.3.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.7.3"
log = "0.4.17"
thiserror = "1.0"
libc = "0.2"

[dev-dependencies]
futures = "0.3"
