[package]
name = "rrddmma"
version = "0.5.6"
edition = "2021"

authors = ["Jian Gao <i@icyf.me>"]
description = "A Rust library for RDMA."
repository = "https://github.com/IcicleF/rrddmma"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memoffset = "0.9"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
log = "0.4"
regex = "1.10"
thiserror = "1.0"
libc = "0.2"

[dev-dependencies]
futures = "0.3"

[build-dependencies]
pkg-config = "0.3"
bindgen = "0.69"
