[package]
name = "rrddmma"
version = "0.7.1"
edition = "2021"

authors = ["Jian Gao <i@icyf.me>"]
description = "A Rust library for RDMA."
repository = "https://github.com/IcicleF/rrddmma"
license = "MIT"

exclude = ["vendor/rdma-core/build"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memoffset = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
log = "0.4"
regex = "1.10"
thiserror = "2.0"
libc = "0.2"
quanta = "0.12"

[dev-dependencies]
futures = "0.3"
anyhow = "1.0"
quanta = "0.12"

[build-dependencies]
pkg-config = "0.3"
bindgen = "0.70"

[features]
warned_spin = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(mlnx4)',
    'cfg(mlnx5)',
    'cfg(manual_mlx5)',
] }
